

DescTools 0.99.56 (2024-08-31)
------------------------------

NEW FUNCTIONS ADDED:
  * none
 
UPDATED FUNCTIONS:
  * TOne() get an own subsetting routine.
  
BUGFIXES:
  * none




DescTools 0.99.55 (2024-07-31)
------------------------------

NEW FUNCTIONS ADDED:
  * NZ() returns all non zero elements from a numeric vector.
  * BrierScoreCI(), CstatCI(), RSqCI() return bootstrap confidence intervals
    for the BrierScore, the C-Statistic and the R squared of a linear model.
 
UPDATED FUNCTIONS:
  * MeanCIn() displays a warning if the required width of the confidence 
    interval exceeds the standard deviation.
  * ToWrd.table() gets another default for row.names. It now is TRUE instead
    of FALSE as before.
  * OddsRatio.glm changes its argument use.profile's default from TRUE to FALSE.
  * MedianCI() allows further bootstrap types, dots arguments are now 
    passed on to the bootstrap procedure. The argument R has been removed, 
    but can still be provided in the dots. Default type for boostrap is 
    no longer 'basic' but 'perc', which seems better suited for the median.
    (See discussion with MrJerryTAO in 
    https://github.com/AndriSignorell/DescTools/issues/109)
  * Some first helpfiles are generated by roxygen2 now.  
  * The arguments in Winsorize() have been condensed to a single one with  
    extended flexibility. 
  * Closest() vectorizes the value to be found (argument "a") and "which".
  * Unwhich() checks its arguments now and got a default value for the argument n.
  * TOne() gets an improved print routine.
  * BrierScore() checks the input arguments.
  * TukeyBiweight() has been rewritten in C++ and now runs twice as fast 
    as before.

BUGFIXES:
  * The text for prop.diff will be displayed in Desc.table().
  * Custom xlab and ylab values can be used in plot.Desc.factfact().
  * MultinomCI() did not correctly set the left/right side intervalls to 0 for 
    single sided intervals.