@@ -1,4 +1,5 @@
 
+#define STRICT_R_HEADERS
 #include <Rcpp.h>
 
 using namespace std;
