@@ -4,10 +4,14 @@ DescTools 0.99.56 (2024-08-31)
 ------------------------------
 
 NEW FUNCTIONS ADDED:
-  * none
+  * WrdTableHeadings() enables the easy definition of table 
+    headings in Word tables.
  
 UPDATED FUNCTIONS:
-  * TOne() get an own subsetting routine.
+  * TOne() gets an own subsetting routine.
+  * Using #define STRICT_R_HEADERS used in order to comply with CRAN's
+    new standards.
+
   
 BUGFIXES:
   * none
